// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Advanced Elements > should render horizontal rule - snapshot 1`] = `
[
  {
    "content": "Before",
    "hasMath": false,
    "spans": [
      {
        "text": "Before",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "hr",
  },
  {
    "content": "After",
    "hasMath": false,
    "spans": [
      {
        "text": "After",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Advanced Elements > should render math expressions - snapshot 1`] = `
[
  {
    "content": "Inline: $x^2$ and display: $$y = mx + b$$",
    "hasMath": true,
    "spans": [
      {
        "text": "Inline: $x^2$ and display: $$y = mx + b$$",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Advanced Elements > should render table - snapshot 1`] = `
[
  {
    "attrs": {
      "headerSpans": [
        [
          {
            "text": "Header 1",
          },
        ],
        [
          {
            "text": "Header 2",
          },
        ],
      ],
      "headers": [
        "Header 1",
        "Header 2",
      ],
      "rowSpans": [
        [
          [
            {
              "text": "Data 1",
            },
          ],
          [
            {
              "text": "Data 2",
            },
          ],
        ],
      ],
      "rows": [
        [
          "Data 1",
          "Data 2",
        ],
      ],
    },
    "type": "table",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Code and Quotes > should render blockquote - snapshot 1`] = `
[
  {
    "content": "This is a famous quote
spanning multiple lines",
    "spans": [
      {
        "text": "This is a famous quote
spanning multiple lines",
      },
    ],
    "type": "blockquote",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Code and Quotes > should render code block - snapshot 1`] = `
[
  {
    "attrs": {
      "lang": "javascript",
    },
    "content": "const x = 42;
console.log(x);
",
    "type": "code",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Complex Documents - Full Snapshots > should parse complete document correctly - snapshot 1`] = `
[
  {
    "attrs": {
      "level": 1,
    },
    "content": "Document Title",
    "spans": [
      {
        "text": "Document Title",
      },
    ],
    "type": "heading",
  },
  {
    "content": "This is the introduction paragraph.",
    "hasMath": false,
    "spans": [
      {
        "text": "This is the introduction paragraph.",
      },
    ],
    "type": "paragraph",
  },
  {
    "attrs": {
      "level": 2,
    },
    "content": "Section 1",
    "spans": [
      {
        "text": "Section 1",
      },
    ],
    "type": "heading",
  },
  {
    "content": "Here’s a list:",
    "hasMath": false,
    "spans": [
      {
        "text": "Here’s a list:",
      },
    ],
    "type": "paragraph",
  },
  {
    "attrs": {
      "ordered": false,
    },
    "children": [
      {
        "content": "Item 1",
        "hasMath": false,
        "spans": [
          {
            "text": "Item 1",
          },
        ],
        "type": "list_item",
      },
      {
        "content": "Item 2",
        "hasMath": false,
        "spans": [
          {
            "text": "Item 2",
          },
        ],
        "type": "list_item",
      },
      {
        "content": "Item 3",
        "hasMath": false,
        "spans": [
          {
            "text": "Item 3",
          },
        ],
        "type": "list_item",
      },
    ],
    "type": "list",
  },
  {
    "attrs": {
      "level": 3,
    },
    "content": "Subsection",
    "spans": [
      {
        "text": "Subsection",
      },
    ],
    "type": "heading",
  },
  {
    "content": "Some code:",
    "hasMath": false,
    "spans": [
      {
        "text": "Some code:",
      },
    ],
    "type": "paragraph",
  },
  {
    "attrs": {
      "lang": "javascript",
    },
    "content": "function demo() {
  return 42;
}
",
    "type": "code",
  },
  {
    "attrs": {
      "level": 2,
    },
    "content": "Section 2",
    "spans": [
      {
        "text": "Section 2",
      },
    ],
    "type": "heading",
  },
  {
    "attrs": {
      "headerSpans": [
        [
          {
            "text": "Feature",
          },
        ],
        [
          {
            "text": "Status",
          },
        ],
      ],
      "headers": [
        "Feature",
        "Status",
      ],
      "rowSpans": [
        [
          [
            {
              "text": "Feature A",
            },
          ],
          [
            {
              "text": "Done",
            },
          ],
        ],
        [
          [
            {
              "text": "Feature B",
            },
          ],
          [
            {
              "text": "Done",
            },
          ],
        ],
      ],
      "rows": [
        [
          "Feature A",
          "Done",
        ],
        [
          "Feature B",
          "Done",
        ],
      ],
    },
    "type": "table",
  },
  {
    "content": "Important quote here",
    "spans": [
      {
        "text": "Important quote here",
      },
    ],
    "type": "blockquote",
  },
  {
    "type": "hr",
  },
  {
    "content": "Final section.",
    "hasMath": false,
    "spans": [
      {
        "text": "Final section.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Simple Elements > should render heading correctly - snapshot 1`] = `
[
  {
    "attrs": {
      "level": 1,
    },
    "content": "Main Title",
    "spans": [
      {
        "text": "Main Title",
      },
    ],
    "type": "heading",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Simple Elements > should render ordered list - snapshot 1`] = `
[
  {
    "attrs": {
      "ordered": true,
      "start": 1,
    },
    "children": [
      {
        "content": "First",
        "hasMath": false,
        "spans": [
          {
            "text": "First",
          },
        ],
        "type": "list_item",
      },
      {
        "content": "Second",
        "hasMath": false,
        "spans": [
          {
            "text": "Second",
          },
        ],
        "type": "list_item",
      },
      {
        "content": "Third",
        "hasMath": false,
        "spans": [
          {
            "text": "Third",
          },
        ],
        "type": "list_item",
      },
    ],
    "type": "list",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Simple Elements > should render paragraph correctly - snapshot 1`] = `
[
  {
    "content": "This is a simple paragraph.",
    "hasMath": false,
    "spans": [
      {
        "text": "This is a simple paragraph.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`PDF Generator Integration Tests > Content Rendering Snapshots > Simple Elements > should render unordered list - snapshot 1`] = `
[
  {
    "attrs": {
      "ordered": false,
    },
    "children": [
      {
        "content": "Item 1",
        "hasMath": false,
        "spans": [
          {
            "text": "Item 1",
          },
        ],
        "type": "list_item",
      },
      {
        "content": "Item 2",
        "hasMath": false,
        "spans": [
          {
            "text": "Item 2",
          },
        ],
        "type": "list_item",
      },
      {
        "content": "Item 3",
        "hasMath": false,
        "spans": [
          {
            "text": "Item 3",
          },
        ],
        "type": "list_item",
      },
    ],
    "type": "list",
  },
]
`;

exports[`PDF Generator Integration Tests > PDF Generation with Content > should generate PDF from code blocks - snapshot 1`] = `
{
  "size": 1765,
}
`;

exports[`PDF Generator Integration Tests > PDF Generation with Content > should generate PDF from heading - snapshot buffer size 1`] = `
{
  "isValid": true,
  "size": 1441,
}
`;

exports[`PDF Generator Integration Tests > PDF Generation with Content > should generate PDF from lists - snapshot 1`] = `
{
  "size": 1564,
}
`;

exports[`PDF Generator Integration Tests > PDF Generation with Content > should generate PDF from table - snapshot 1`] = `
{
  "size": 1721,
}
`;

exports[`PDF Generator Integration Tests > PDF Generation with Content > should handle multiline content properly - snapshot 1`] = `
{
  "size": 2092,
}
`;
